# owlai

./: .coverage  .cursorrules  .env  .env.prod  .gitattributes  .gitignore  README.md  download_vector_store.py  edwige.py  fly.py  flyhigh.py  logging.yaml  main.py  memory_profile.py  prompt.txt  pyproject.toml  pyrightconfig.json  pytest.ini  requ.txt  requirements-12032025.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  setup.py
.cursor/rules/: my-first-rule.mdc  powershell-commands.mdc
config/: logging.development.yaml  logging.production.yaml
dependencies/: requirements-26032025.txt  requirements-ingest.txt  requirements-prod.txt  requirements.txt
examples/: fly.py  flyhigh.py  fr_law_example.py  memory_profile.py  naruto_example.py  search_agent.py  testpy.py
examples/archived/: splittest.py
owlai/: __init__.py  agent_manager.py  config.py  core.py  data.py  db.py  dbmodels.py  document_parser.py  edwige.py  fr_law_load_docs.py  localtts.py  memory.py  models.py  nest.py  owlai.py  owlsys.py  parser.py  rag.py  rag_agent.py  spotify.py  telemetry.py  tools.py  ttsengine.py  vector_store.py  vector_store_manager.py
owlai/config/: __init__.py  agents.py  logging.yaml  prompts.py  tools.py  tracing.py  users.py
owlai/core/: __init__.py  agent.py  config.py  configuration.py  factory.py  interfaces.py  logging.py  logging_setup.py  message_manager.py  model_manager.py  rag_config.py  tool_manager.py
owlai/data/: users.yaml
owlai/db/: __init__.py  create_vector_store_table.py  download_vector_store.py  memory.py  models.py  pinecone_migration.py  schema.sql  test_db_connection.py  vector_store_manager.py
owlai/services/: data.py  data_provider.py  datastore.py  embeddings.py  faissanalytics.py  parser.py  rag.py  reranker.py  system.py  toolbox.py
owlai/wip/: interpreter.py
scripts/: pydantic_v2_migration.py  run_agent.py  run_owlai.py  scrapping.py  test.py  testdb.py  testpinecone.py  trash.py
scripts/archived/: advanced-chunking.py  hf-eval-data-prep.py  testlanggraph.py  testreactagent.py
src/: __init__.py
src/experiment/: advanced-rag.py  testlangchain.py
src/owlai/: core.py  db.py  edwige.py  owlsys.py  rag.py  tools.py  ttsengine.py
src/tests/: test_core.py
src/tmp/: advanced-rag.py  evaluation.py  fr-law-rag-test.py
test/: advanced-rag.py  evaluation.py  fr-law-rag-test.py  generate_fancy_report.py  generate_report.py  override.py  rag-french.py  rag-test.py  test-init-chat.py  testindexing.py  testpdfloader.py  testpy.py
test/archived/: id.py  testindexing.py  testprint.py
tests/: README.md  __init__.py  advanced-rag.py  classloadingtest.py  dependencies.py  e2e_evaluation_v0.py  eval_pinecone_vs_small_dataset.py  evaluation.py  evaluation_pinecone.py  fr-law-rag-test-v2.py  fr-law-rag-test.py  fr_law_document_load.py  fr_law_rag_test.py  langgraph-owlai-agent.py  memory_monitor.py  memory_profile.py  test_agent.py  test_chunking.py  test_concurrent.py  test_config.py  test_core.py  test_core_classes.py  test_document_parser.py  test_error_handling.py  test_footer_removal.py  test_fr_law_load_docs.py  test_integration.py  test_memory.py  test_metadata_extraction.py  test_pdf_parsing.py  test_performance.py  test_rag_agent.py  test_rag_search.py  test_search_agent.py  test_vector_store.py  trash.py  visualize_results.py  vizualize_evaluation_pinecone.py
tests/archived/: rag-french.py  rag-test.py
tests/core/: test_agent.py  test_config.py  (+5 more)
(+15 files in other folders)
